--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://nastava.is.pmf.uns.ac.rs:3306/is2
+spring.datasource.username=ris
+spring.datasource.password=ris2Nastava!
+
+# using the right database platform is extremely important on Spring Boot 2.0
+spring.jpa.database-platform=org.hibernate.dialectMySQL5Dialect
+
+# conflicts with Heroku from local host
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=update
